2004-12-06  Arjen Markus <arjenmarkus@users.sourceforge.net>
    
        * Fixed bug in rungeKuttaStep (calculus.tcl) found by Mark Stucky.
          (Also moved the empty lines upward to better reflect the steps)

2004-11-25  Andreas Kupries <andreask@activestate.com>

	* linalg.man: Fixed a formatting bug in the file, found by a
	  regular run of the SAK tool.

2004-11-25  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Added descriptions of various linear algebra procedures
        * Updated the code and expanded test cases

2004-11-22  Andreas Kupries <andreask@activestate.com>

	* rational_funcs.tcl: Removed bad source'ing of file
	  polynomials.tcl. Depended on current working directory in the
	  right place, and superfluous as well, as immediately after a
	  'package require' of the package loaded it in the proper
	  manner. Disabled the test code at the end as well.

2004-11-08  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Added preliminary versions of a linear algebra module
          (revision of Hume's LA). No documentation yet
        * Removed the initialisation of CDF (that was left in there)

2004-11-01  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Moved initialisation of CDF in statistics module to 
          first call

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-10-02  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Added preliminary documentation for the geometry module
        * Added procedure areaPolygon to the geometry module
        * Added Fourier transform module

2004-09-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bignum.test: Boilerplate reading file under test.

2004-09-30  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Added a first set of test cases for the bignum module
        * Corrected the namespace for the bignum module
